--- a/profil.html
+++ b/profil.html
@@ -9,6 +9,9 @@
 
 <body>
 
+<!-- ===============================
+     NAVBAR FINAL SERAGAM
+================================= -->
 <header>
   <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
 
@@ -17,11 +20,11 @@
 
     <nav>
       <ul>
-        <li><a href="/">Beranda</a></li>
-        <li><a href="/profil" class="active">Profil</a></li>
-        <li><a href="/layanan">Layanan</a></li>
-        <li><a href="/karir">Karir</a></li>
-        <li><a href="/kontak">Kontak</a></li>
+        <li><a href="/" class="nav-beranda">Beranda</a></li>
+        <li><a href="/profil" class="nav-profil active">Profil</a></li>
+        <li><a href="/layanan" class="nav-layanan">Layanan</a></li>
+        <li><a href="/karir" class="nav-karir">Karir</a></li>
+        <li><a href="/kontak" class="nav-kontak">Kontak</a></li>
       </ul>
     </nav>
 
@@ -29,34 +32,32 @@
   </div>
 
   <div id="mobileMenu">
-    <a href="/">Beranda</a>
-    <a href="/profil">Profil</a>
-    <a href="/layanan">Layanan</a>
-    <a href="/karir">Karir</a>
-    <a href="/kontak">Kontak</a>
+    <a href="/" class="nav-beranda">Beranda</a>
+    <a href="/profil" class="nav-profil active">Profil</a>
+    <a href="/layanan" class="nav-layanan">Layanan</a>
+    <a href="/karir" class="nav-karir">Karir</a>
+    <a href="/kontak" class="nav-kontak">Kontak</a>
   </div>
 </header>
 
-<!-- ================================
-     PROFILE CONTENT
-================================ -->
 
+<!-- ===============================
+     PROFIL — CONTENT
+================================= -->
 <section style="padding-top:160px;">
   <h1>Profil Perusahaan</h1>
 
   <p>
-    Assistenku lahir dari sebuah perjalanan panjang yang berangkat dari realita kehidupan modern:
-    masyarakat semakin sibuk, ritme kerja semakin cepat, dan kebutuhan akan bantuan profesional
-    semakin tak terhindarkan. Di titik itulah Assistenku hadir — bukan sekadar penyedia tenaga
-    kerja, tetapi sebagai <strong>mitra yang memahami</strong> perlunya kenyamanan, keamanan, dan ketenangan
-    dalam aktivitas sehari-hari.
+    Assistenku lahir dari kebutuhan masyarakat modern yang semakin memerlukan
+    layanan asistensi yang profesional, mudah dijangkau, dan dapat diandalkan.
+    Kami tidak hanya menghadirkan tenaga kerja, tetapi juga menghadirkan rasa
+    aman, nyaman, dan ketenangan dalam kehidupan sehari-hari.
   </p>
 
   <p>
-    Assistenku dibangun dengan satu tujuan: <strong>menciptakan pengalaman layanan asistensi yang mudah,
-    terpercaya, dan manusiawi.</strong> Kami ingin setiap keluarga dan pelaku bisnis merasa bahwa ada pihak
-    yang benar-benar mereka bisa andalkan — bukan hanya untuk bekerja, tetapi juga untuk menjaga
-    nilai dan kepercayaan.
+    Dengan pendekatan modern dan penuh empati, Assistenku dirancang sebagai
+    solusi yang membantu keluarga, individu, maupun bisnis untuk menjalankan
+    aktivitas dengan lebih mudah dan efisien.
   </p>
 </section>
 
@@ -64,44 +65,42 @@
   <h2>Sejarah Berdirinya Assistenku</h2>
 
   <p>
-    Pada tahun 2023, pendiri Assistenku melihat bahwa banyak keluarga dan usaha kecil mengalami
-    kesulitan menemukan tenaga kerja yang jujur, terlatih, dan profesional. Banyak proses
-    perekrutan yang rumit, tidak transparan, dan sering kali tidak memberikan jaminan apa pun.
+    Pada tahun 2023, pendiri Assistenku melihat masih banyak keluarga dan usaha
+    kecil yang kesulitan mendapatkan tenaga kerja yang jujur, terlatih, dan aman.
+    Banyak proses rekrutmen yang rumit dan tidak memberi jaminan kualitas.
   </p>
 
   <p>
-    Dari pengalaman itu, lahirlah tekad untuk membangun sebuah layanan yang berbeda: layanan
-    yang mengutamakan <strong>kualitas, kejujuran, standar etika, dan keamanan</strong>. Assistenku mulai
-    dirancang dengan sistem modern, manajemen yang lebih tertata, serta alur rekrutmen dan
-    pelatihan yang jauh lebih profesional.
+    Dari situlah muncul ide untuk membangun layanan asistensi modern yang lebih
+    manusiawi, profesional, dan transparan — layanan yang mengutamakan etika,
+    kejujuran, serta kualitas kerja yang dapat dipercaya.
   </p>
 
   <p>
-    Visi tersebut berkembang, dan Assistenku kini menjadi salah satu platform asistensi modern
-    yang menggabungkan nilai manusiawi dengan pendekatan kerja yang efisien dan terstruktur.
+    Dengan sistem yang lebih tertata, metode pelatihan yang jelas, dan standar
+    seleksi yang ketat, Assistenku berkembang menjadi platform asistensi modern
+    yang menggabungkan teknologi dan nilai kemanusiaan.
   </p>
 </section>
 
 <section>
   <h2>Visi Perusahaan</h2>
-
   <p>
-    Menjadi penyedia layanan asistensi paling terpercaya, modern, dan mudah diakses di Indonesia —
-    menghadirkan kenyamanan dan ketenangan bagi setiap keluarga serta pelaku usaha.
+    Menjadi penyedia layanan asistensi paling terpercaya dan mudah diakses di
+    Indonesia, yang menghadirkan kenyamanan serta ketenangan bagi keluarga dan
+    pelaku usaha.
   </p>
 
   <h2>Misi Perusahaan</h2>
-
-  <p>• Menyediakan tenaga kerja yang terlatih, beretika, dan bertanggung jawab.</p>
-  <p>• Menjaga kualitas pelayanan melalui manajemen yang modern dan terstruktur.</p>
-  <p>• Menghadirkan pengalaman layanan asistensi yang mudah diakses dan transparan.</p>
-  <p>• Mengutamakan keamanan, kenyamanan, dan hubungan jangka panjang dengan klien.</p>
+  <p>• Menyediakan tenaga kerja terlatih dan beretika tinggi.</p>
+  <p>• Menghadirkan proses layanan yang modern, cepat, dan transparan.</p>
+  <p>• Memberikan pengalaman asistensi yang aman dan profesional.</p>
+  <p>• Membangun hubungan jangka panjang dengan klien melalui kualitas.</p>
 </section>
 
-<!-- ================================
+<!-- ===============================
      FOUNDER SECTION
-================================ -->
-
+================================= -->
 <section>
   <h2>Founder & Co-Founder</h2>
 
@@ -111,11 +110,9 @@
       <img src="/founder1.png" class="founder-img">
       <h3>Abdurrahman Hanif</h3>
       <p>
-        Founder Assistenku. Memiliki pengalaman dalam operasional, manajemen layanan,
-        dan penanganan kebutuhan asistensi modern. Hanif membangun Assistenku
-        dengan prinsip bahwa pelayanan terbaik dimulai dari kepercayaan dan
-        profesionalitas. Fokus utamanya adalah memastikan seluruh layanan berjalan
-        dengan standar tinggi dan tetap mudah diakses oleh masyarakat.
+        Founder Assistenku. Memiliki pengalaman dalam operasional, manajemen,
+        dan layanan asistensi modern. Hanif membangun Assistenku dengan fokus
+        pada kejujuran, profesionalitas, dan kemudahan layanan untuk masyarakat.
       </p>
     </div>
 
@@ -123,20 +120,19 @@
       <img src="/founder2.png" class="founder-img">
       <h3>Putri Rahmadani</h3>
       <p>
-        Co-Founder Assistenku. Memiliki keahlian di bidang rekrutmen dan pengembangan
-        tenaga kerja rumah tangga, caregiver, dan asistensi pribadi. Putri menyusun
-        kurikulum pelatihan dan standar kualitas SDM sehingga setiap tenaga kerja
-        yang dikirimkan memiliki sikap, keterampilan, dan etika kerja yang baik.
+        Co-Founder Assistenku. Berpengalaman dalam rekrutmen dan pengembangan
+        tenaga kerja rumah tangga, caregiver, dan asistensi pribadi.
+        Bertanggung jawab terhadap penyusunan kurikulum pelatihan serta standar
+        kualitas tenaga kerja.
       </p>
     </div>
 
   </div>
 </section>
 
-<!-- ================================
+<!-- ===============================
      LEGAL SECTION
-================================ -->
-
+================================= -->
 <section>
   <h2>Legalitas Perusahaan</h2>
 
@@ -149,12 +145,13 @@
     </div>
 
     <div class="card">
-      <h3>Dokumen Legal Tambahan</h3>
-      <p>Dokumen pendukung usaha, sertifikasi, dan perizinan tambahan yang sah.</p>
+      <h3>Dokumen Legal Lain</h3>
+      <p>Dokumen pendukung usaha, sertifikasi, dan izin operasional lainnya.</p>
+
       <img src="/NIB2.png" class="legal-img">
 
       <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk"
-         target="_blank" class="btn-primary">
+         class="btn-primary" target="_blank">
         Lihat Semua Dokumen Legalitas
       </a>
     </div>
