--- a/karir.html
+++ b/karir.html
@@ -13,37 +13,44 @@
   <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
 
   <div class="navbar">
-    <img src="/logo.png" class="logo" alt="Logo Assistenku">
+    <img src="/logo.png" class="logo">
 
-    <nav class="nav-links">
-      <a href="/index.html">Beranda</a>
-      <a href="/profil.html">Profil</a>
-      <a href="/layanan.html">Layanan</a>
-      <a href="/karir.html" class="active">Karir</a>
-      <a href="/kontak.html">Kontak</a>
+    <nav>
+      <ul>
+        <li><a href="/">Beranda</a></li>
+        <li><a href="/profil">Profil</a></li>
+        <li><a href="/layanan">Layanan</a></li>
+        <li><a href="/karir" class="active">Karir</a></li>
+        <li><a href="/kontak">Kontak</a></li>
+      </ul>
     </nav>
 
-    <div class="hamburger">
-      <span></span><span></span><span></span>
-    </div>
+    <div id="menuIcon">☰</div>
+  </div>
+
+  <div id="mobileMenu">
+    <a href="/">Beranda</a>
+    <a href="/profil">Profil</a>
+    <a href="/layanan">Layanan</a>
+    <a href="/karir" class="active">Karir</a>
+    <a href="/kontak">Kontak</a>
   </div>
 </header>
 
-
-<section class="page-section">
+<section style="padding-top:160px;">
   <h1>Karir di Assistenku</h1>
+
   <p>
-    Assistenku membuka kesempatan bagi tenaga kerja yang jujur, disiplin, dan
-    ingin berkembang. Kami percaya bahwa setiap individu berhak mendapat peluang
-    kerja yang jelas, manusiawi, dan aman.
+    Assistenku membuka kesempatan bagi tenaga kerja yang jujur, disiplin,
+    dan ingin berkembang. Kami menyediakan peluang kerja yang aman, jelas,
+    dan profesional dengan dukungan pembinaan di awal penempatan.
   </p>
 
   <p>
-    Semua tenaga kerja mendapatkan bimbingan awal, pengarahan, dan dukungan
-    agar siap ditempatkan di lingkungan kerja yang profesional.
+    Setiap kandidat akan mendapatkan pengarahan, bimbingan, serta dukungan
+    agar siap ditempatkan di lingkungan kerja yang profesional dan manusiawi.
   </p>
 </section>
-
 
 <section>
   <h2>Lowongan Tersedia</h2>
@@ -52,7 +59,7 @@
 
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>Membantu pekerjaan rumah dengan rapi dan profesional.</p>
+      <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
 
       <strong>Tugas:</strong>
       <ul>
@@ -64,22 +71,19 @@
       <strong>Syarat:</strong>
       <ul>
         <li>Usia 18–50 tahun</li>
-        <li>Sehat jasmani</li>
         <li>Jujur & bertanggung jawab</li>
+        <li>Sehat jasmani</li>
       </ul>
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20ART">Lamar via WhatsApp</a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20ART">Kirim via Email</a>
       </div>
     </div>
 
-
     <div class="card">
       <h3>Pendamping Lansia</h3>
-      <p>Mendampingi lansia dengan kesabaran dan empati.</p>
+      <p>Mendampingi lansia dengan perhatian dan empati.</p>
 
       <strong>Tugas:</strong>
       <ul>
@@ -91,28 +95,25 @@
       <strong>Syarat:</strong>
       <ul>
         <li>Usia 20–45 tahun</li>
-        <li>Sabar & sopan</li>
+        <li>Sabar, sopan, dan telaten</li>
         <li>Sehat jasmani</li>
       </ul>
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">Lamar via WhatsApp</a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Pendamping%20Lansia">Kirim via Email</a>
       </div>
     </div>
 
-
     <div class="card">
       <h3>Pengemudi Pribadi</h3>
-      <p>Mengemudi aman dan profesional untuk keluarga atau bisnis.</p>
+      <p>Mengemudi dengan aman, sopan, dan profesional.</p>
 
       <strong>Tugas:</strong>
       <ul>
-        <li>Antar jemput</li>
-        <li>Perawatan kendaraan dasar</li>
-        <li>Mengemudi defensif</li>
+        <li>Antar jemput keluarga</li>
+        <li>Perjalanan dinas</li>
+        <li>Perawatan kendaraan ringan</li>
       </ul>
 
       <strong>Syarat:</strong>
@@ -124,15 +125,12 @@
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Driver">Lamar via WhatsApp</a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Driver">Kirim via Email</a>
       </div>
     </div>
 
-
     <div class="card">
       <h3>Penjaga Toko</h3>
-      <p>Melayani pembeli, menata barang, dan menjaga kebersihan toko.</p>
+      <p>Melayani pembeli dan menjaga kebersihan area toko.</p>
 
       <strong>Tugas:</strong>
       <ul>
@@ -143,16 +141,13 @@
 
       <strong>Syarat:</strong>
       <ul>
-        <li>Ramah & komunikatif</li>
+        <li>Komunikatif & ramah</li>
         <li>Teliti</li>
-        <li>Siap berdiri lama</li>
       </ul>
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Penjaga%20Toko">Lamar via WhatsApp</a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Penjaga%20Toko">Kirim via Email</a>
       </div>
     </div>
 
