--- a/layanan.html
+++ b/layanan.html
@@ -184,11 +184,11 @@
 
       <h4 style="margin-top:10px;">Kelas Pembuatan Website</h4>
       <ul>
-        <li><b>Kelas 1 — Basic</b> (1–2 juta)</li>
-        <li><b>Kelas 2 — Premium</b> (3–7 juta)</li>
-        <li><b>Kelas 3 — Profesional</b> (10–20 juta)</li>
-        <li><b>Kelas 4 — Bisnis</b> (30–70 juta)</li>
-        <li><b>Kelas 5 — Enterprise</b> (100–200 juta)</li>
+        <li><b>Kelas 1 — Basic</b></li>
+        <li><b>Kelas 2 — Premium</b></li>
+        <li><b>Kelas 3 — Profesional</b></li>
+        <li><b>Kelas 4 — Bisnis</b></li>
+        <li><b>Kelas 5 — Enterprise</b></li>
       </ul>
 
       <div class="apply-box">
