--- a/kontak.html
+++ b/kontak.html
@@ -86,6 +86,20 @@
          target="_blank">Kirim Email Karir</a>
     </div>
 
+    <!-- Instagram -->
+    <div class="card">
+      <h3>Instagram Resmi</h3>
+      <p>
+        Ikuti perkembangan terbaru Assistenku, lihat aktivitas behind-the-scenes,
+        tips menarik, serta update layanan dan lowongan kerja yang selalu di-update.
+        Banyak konten bermanfaat yang tidak kami bagikan di tempat lain!
+      </p>
+
+      <a class="btn-primary"
+         href="https://www.instagram.com/assistenku.id?igsh=MWN4cmR5YmFwNTU4Ng=="
+         target="_blank">Kunjungi Instagram Kami</a>
+    </div>
+
   </div>
 </section>
 
