--- a/kontak.html
+++ b/kontak.html
@@ -90,14 +90,19 @@
     <div class="card">
       <h3>Instagram Resmi</h3>
       <p>
-        Ikuti perkembangan terbaru Assistenku, lihat aktivitas behind-the-scenes,
-        tips menarik, serta update layanan dan lowongan kerja yang selalu di-update.
-        Banyak konten bermanfaat yang tidak kami bagikan di tempat lain!
+        Ikuti update terbaru, lihat aktivitas tim kami, dan temukan berbagai tips
+        serta informasi menarik seputar layanan asistensi.  
+        Banyak konten yang tidak kami tampilkan di website!
       </p>
 
+      <!-- Ikon + Tombol -->
       <a class="btn-primary"
          href="https://www.instagram.com/assistenku.id?igsh=MWN4cmR5YmFwNTU4Ng=="
-         target="_blank">Kunjungi Instagram Kami</a>
+         target="_blank">🌐 Kunjungi Instagram</a>
+
+      <a class="btn-secondary"
+         href="https://www.instagram.com/assistenku.id/feed/"
+         target="_blank">📸 Lihat Feed Terbaru</a>
     </div>
 
   </div>
