--- a/kontak.html
+++ b/kontak.html
@@ -101,7 +101,7 @@
          target="_blank">🌐 Kunjungi Instagram</a>
 
       <a class="btn-secondary"
-         href="https://www.instagram.com/assistenku.id/feed/"
+         href="https://www.instagram.com/assistenku.id/"
          target="_blank">📸 Lihat Feed Terbaru</a>
     </div>
 
